# sayancpe586fa25

./: .gitignore  Cargo.toml  README.md  pyproject.toml
project/: README_PROJECT.txt  convert_logs_to_npy.py  diffusion.py  result_plot.py  result_plot.sh  train_Masked_diffusion_pipeline_per_device_per_segment_update.py  train_Masked_vae_pipeline_per_device_per_segment_update.py  train_Masked_wgan_pipeline_per_device_per_segment_update.py  train_diffusion_pipeline_per_device_per_segment_update.py  train_vae_pipeline_per_device_per_segment_update.py  train_wgan_pipeline_per_device_per_segment_update.py  vae.py  wgan.py
scripts/: acc_classifier_impl.py  acc_classifier_impl.sh  acc_model.onnx  binaryclassification_animate_impl.py  binaryclassification_impl.py  gen_model_impl.py  gen_model_impl.sh  gen_model_infernce.py  gen_model_infernce.sh  image_metrics.py  imagenet_impl.py  imagenet_impl.sh  imagenet_inference.py  malwaredatadownload.sh  multiclass_eval.py  multiclass_impl.py  multiclass_impl.sh  run_acc_classifier.sh  run_binary_training.sh  run_gen_model.sh  run_imagenet.sh  run_multiclass.sh
scripts/gen_models_v2/: diffusion_epoch_200.onnx
scripts/results/: hw02_metrics_20260207021930.csv  hw02_metrics_20260207022702.csv  hw02_metrics_20260207022938.csv  hw02_metrics_20260207023208.csv  hw02_metrics_20260207023437.csv  hw02_metrics_20260207023705.csv
src/: lib.rs
src/sayancpe586fa25/: __init__.py
src/sayancpe586fa25/animation/: __init__.py
src/sayancpe586fa25/deepl/: __init__.py  acc_classifier.py  gen_model.py  multiclass.py  (+1 more)
(+9 files in other folders)
