[project]
name = "sayancpe586fa25"
version = "4.5.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sayancpe586fa25", email = "sayancpe586fa25@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "polars>=1.34.0",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "twine>=6.1.0",
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
