[project]
name = "sayancpe586fa25"
version = "4.6.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sayancpe586fa25", email = "sayancpe586fa25@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "manim>=0.19.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.1",
    "pandas>=3.0.0",
    "polars>=1.34.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "twine>=6.1.0",
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
